GPv3: Blender crash using Separate Operators on converted files from GPv2 #120926

Closed
opened 2024-04-22 13:10:05 +02:00 by Matias Mendiola · 2 comments

System Information
Operating system: Windows-10-10.0.22631-SP0 64 Bits
Graphics card: NVIDIA GeForce RTX 3070 Ti/PCIe/SSE2 NVIDIA Corporation 4.6.0 NVIDIA 551.86

Blender Version
Broken: version: 4.2.0 Alpha, branch: main (modified), commit date: 2024-04-17 20:19, hash: 4666af64a6e4
Worked: 4.2.0 Alpha on native GPv3 files

Short description of error
Blender crash when using any of Separate Operators (Selected, by Layers, by Materials) but only on files created in GPv2. It is working well in GPv3 files created from scratch or using the GPv3 primitives.

Exact steps for others to reproduce the error

  • Open a file created in GPv2 with autoconvert option enabled in preferences
  • Use Separate Operator in any mode (Selected, by Layers, by Materials)
**System Information** Operating system: Windows-10-10.0.22631-SP0 64 Bits Graphics card: NVIDIA GeForce RTX 3070 Ti/PCIe/SSE2 NVIDIA Corporation 4.6.0 NVIDIA 551.86 **Blender Version** Broken: version: 4.2.0 Alpha, branch: main (modified), commit date: 2024-04-17 20:19, hash: `4666af64a6e4` Worked: 4.2.0 Alpha on native GPv3 files **Short description of error** Blender crash when using any of Separate Operators (Selected, by Layers, by Materials) but only on files created in GPv2. It is working well in GPv3 files created from scratch or using the GPv3 primitives. **Exact steps for others to reproduce the error** - Open a file created in GPv2 with autoconvert option enabled in preferences - Use Separate Operator in any mode (Selected, by Layers, by Materials)
Matias Mendiola added the
Priority
Normal
Type
Report
Status
Needs Triage
labels 2024-04-22 13:10:06 +02:00
Falk David added this to the Grease Pencil project 2024-04-22 13:15:10 +02:00
Member

Yes, can confirm

Yes, can confirm
Pratik Borhade added
Module
Grease Pencil
Status
Confirmed
and removed
Status
Needs Triage
labels 2024-04-22 13:40:23 +02:00
Member

Think this one can be High priority (crash and kind of easy to run into)

Think this one can be High priority (crash and kind of easy to run into)
Philipp Oeser added
Priority
High
and removed
Priority
Normal
labels 2024-04-23 12:34:55 +02:00
Blender Bot added
Status
Resolved
and removed
Status
Confirmed
labels 2024-04-24 14:08:55 +02:00
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
3 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#120926
No description provided.